# do not edit -- automatically generated by arch changelog
# arch-tag: automatic-ChangeLog--jgoerzen@complete.org--projects/missingh--head--0.7
#

2004-12-03 20:48:08 GMT	John Goerzen <jgoerzen@complete.org>	patch-15

    Summary:
      Import Inflate
    Revision:
      missingh--head--0.7--patch-15


    new files:
     libsrc/MissingH/Compression/Inflate.hs

    modified files:
     ChangeLog Setup.description


2004-12-03 20:41:57 GMT	John Goerzen <jgoerzen@complete.org>	patch-14

    Summary:
      Preparing to import Inflate
    Revision:
      missingh--head--0.7--patch-14


    new files:
     3rd-party-licenses/BSD
     libsrc/MissingH/Compression/.arch-ids/=id

    modified files:
     COPYRIGHT ChangeLog

    new directories:
     libsrc/MissingH/Compression
     libsrc/MissingH/Compression/.arch-ids


2004-12-03 20:32:24 GMT	John Goerzen <jgoerzen@complete.org>	patch-13

    Summary:
      Wrote unit tests for CRC32 module
    Revision:
      missingh--head--0.7--patch-13


    new files:
     testsrc/CRC32test.hs

    modified files:
     ChangeLog libsrc/MissingH/Checksum/CRC32.hs testsrc/Tests.hs


2004-12-03 20:18:47 GMT	John Goerzen <jgoerzen@complete.org>	patch-12

    Summary:
      Added MissingH.Checksum.CRC32
    Revision:
      missingh--head--0.7--patch-12


    new files:
     libsrc/MissingH/Checksum/.arch-ids/=id
     libsrc/MissingH/Checksum/CRC32.hs

    modified files:
     ChangeLog

    new directories:
     libsrc/MissingH/Checksum libsrc/MissingH/Checksum/.arch-ids


2004-12-03 17:44:02 GMT	John Goerzen <jgoerzen@complete.org>	patch-11

    Summary:
      Fixed the upstream changelog
    Revision:
      missingh--head--0.7--patch-11


    new files:
     ChangeLog

    renamed files:
     ChangeLog
       ==> ChangeLog-0.5.0


2004-12-03 16:09:10 GMT	John Goerzen <jgoerzen@complete.org>	patch-10

    Summary:
      Updated changelog
    Revision:
      missingh--head--0.7--patch-10


    modified files:
     debian/changelog

