@@ -2,6 +2,18 @@
 # arch-tag: automatic-ChangeLog--jgoerzen@complete.org--projects/missingh--head--0.7
 #
 
+2004-12-03 21:18:44 GMT	John Goerzen <jgoerzen@complete.org>	patch-16
+
+    Summary:
+      Little bit of hacking on Inflate to make it work nicer
+    Revision:
+      missingh--head--0.7--patch-16
+
+
+    modified files:
+     ChangeLog libsrc/MissingH/Compression/Inflate.hs
+
+
 2004-12-03 20:48:08 GMT	John Goerzen <jgoerzen@complete.org>	patch-15
 
     Summary:
